# s3lite

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: admin.rs  config.rs  lib.rs  main.rs
src/http/: error.rs  mod.rs  request_context.rs  router.rs
src/http/middleware/: auth.rs  mod.rs  presigned.rs  request_id.rs
src/s3/: addressing.rs  bucket.rs  checksum.rs  copy.rs  cors.rs  dispatch.rs  events.rs  listing.rs  lock.rs  maintenance.rs  mod.rs  multipart.rs  object.rs  state.rs  tagging.rs  xml.rs
src/storage/: manifest.rs  mod.rs  parts.rs
src/storage/db/: actor.rs  errors.rs  mod.rs  tables.rs
tests/: admin.rs  binary.rs  http.rs  s3_sdk.rs  storage.rs
