[package]
name = "s3lite"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
redb = "2"
blake3 = "1"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1"
crc32c = "0.6"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
thiserror = "2"
tracing = "0.1"

# HTTP layer
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
quick-xml = { version = "0.38", features = ["serialize"] }

# Sigv4 server-side verification (uses chrono internally; bridge at the call site)
scratchstack-aws-signature = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Identifiers / random / constant-time
base64 = "0.22"
rand = "0.9"
subtle = "2"

# Event notifications: outbound webhook delivery
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
aws-sigv4 = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
